improving the first subsection

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -160,7 +160,7 @@ sub-halo from in a particular case found at z$=0$. The arrows show the
 position and the velocity vectors sub-halo in a frame of reference
 where the main halo is at rest; thus  $\vec{v{}}=\vec{v}_{sub}-\vec{v}_{halo}$ and
 $\vec{r}=\vec{r}_{sub}-\vec{r}_{halo}$.  The angle between these two
-vectors characterized by,
+vectors characterized by, 
 \begin{equation}
   \mu\equiv
   \cos(\theta)=\frac{\vec{v{}}\cdotp{}\vec{r}}{\left\|\vec{v}{}\right\|
@@ -212,14 +212,12 @@ kind of interactions observed in the Bolshoi simulation.
 \subsection{Displacements and Relative Circular Velocities}
 \label{fig:displacement}
 
-
-
 \begin{figure*}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{New_figures/figure_2.eps}
 \end{center}
 \caption{
-Integrated probability distribution for the displacement
+  Integrated probability distribution for the displacement
   between the host halo and its dominand sub-halo. The left panel
   shows the results in terms of the physical displacements and the
   right panel the same displacement normalized by the virial radius of
@@ -238,7 +236,7 @@ Integrated probability distribution for the displacement
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_2.eps}
+\includegraphics[width=0.8\textwidth]{Figures_eps/figure_4_VcircsubVcirchalo_300kms_700kms.eps}
 \end{center}
 \caption{2D histogram in the plane $V_{\rm c,sub}/V_{\rm
     c,host}$-$d_{2D}$. The left panel corresponds to groups and the
@@ -267,30 +265,36 @@ presented for all redshifts $z=0.0, 0.25, 0.5$ and $1.0$.
 The panel with the physical displacements also shows a vertical stripe
 with the estimated displacement for the Bullet-group reported by
 \cite{Gastaldello}. Considering this system as consistent withe the
-groups sample we see that a fraction of $\sim XX\pm XX\%$ of the groups
+groups sample we see that a fraction of $\sim 15\pm 2\%$ of the groups
 should present a displacement equal or larger than the one estimated
-for \bullg. The panel with the normalized displacements shows a
-distribution that can be considered close to universal in the sense
-that the two samples (groups and clusters) at all redshifts present a
-similar trend.[...]
+for \bullg, this fraction is close to $45\pm2\% $. The panel with the
+normalized displacements shows a  distribution that can be considered
+close to universal in the sense that the two samples (groups and
+clusters) at all redshifts present a similar trend.[...]
 
 Figure \ref{fig:mass_displacement} shows 2D histograms in a plane
 composed by the ratio of the two circular velocities $V_{\rm c,
-  sub}/V_{\rm c, host}$ and the physical displacements. In each of the
-halo samples (left, groups; right, clusters) the two-dimensional
-distributions are similar and have been therefore integrated to build
-the 2D histogram.  
+  sub}/V_{\rm c, host}$ and the physical displacements. This is
+revealing because these two quantities can be constrained by
+observations. The displacement is a direct observable, while the ratio
+of the circular velocities can be estimated from lensing studies or
+approximated by the ratio of the total galaxy luminosity associated
+with the galaxy peaks.
 
-On top of these 2D histograms there is an circle with error bars that
-represents the observational estimates for the system \bullg. [...]
+To construct this figure we co-add all the halos in the sample (left,
+groups; right, clusters) at all redshifts. We stack the data because
+we do not observe any strong time evolution, aditionally this allows
+us to increase the signal in each bin. Overplotted there is an circle
+with error bars that represents the observational estimates for the
+system \bullg. 
 
 
 \subsection{Relative Velocities}
 \label{sec:velocities}
 
-\begin{figure*}
+\begin{figure}
 \begin{center}
-%\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_2.eps}
+\includegraphics[width=0.5\textwidth]{Figures_eps/figure_3.eps}
 \end{center}
 \caption{Integrated probability distribution for the relative velocity of the
 sub-halo with respect to its host. The left panel shows the results
@@ -298,7 +302,7 @@ in physical units while the right panel show the same values
 normalized by the circular velocity of the host halo. The line coding
 follows the same structure as Figure \ref{fig:displacements}}
 \label{fig:velocities}
-\end{figure*}
+\end{figure}
 
 In Figure \ref{fig:velocities} we present the integrated probability
 of the relative peculiar velocities of the sub-halos with respect to
@@ -306,10 +310,32 @@ the host halo. The left panel presents this velocity in physical units
 while the left panel presents them as a fraction of the circular
 velocity of the host halo. 
 
+The panel with the normalized velocities shows that the distribution
+of sub-halo velocities is close to universal. Regardless
+of the mass of the host halo and the redshift the integrated
+distributions lie very close to each other. 
+
+The median of this distribution is located at $v/V_{\rm
+  c,host}=1.1$. We also note the strong break at $v/V_{\rm
+  c,host}=3.0$ that is present in the data from the group sample that
+allows us to probe fractions on the order of $10^{-4}$.  This break is
+located close the escape velocity of $v/V_{\rm c,host}$ for dark
+matter halos following a NFW profile with a concentration value
+$c\approx 6$ \citep{Hayashi2006}. 
+
 
 
 \subsection{Collision Geometries}
 \label{fig:geometry}
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=1.0\textwidth]{Figures_eps/figure_4_300kms_700kms.eps}
+\end{center}
+\caption{x}
+\label{fig:velocities}
+\end{figure*}
+
 
 \section{Discussion}
 \label{sec:discussion}
@@ -333,25 +359,6 @@ repository. [...]
 \label{sec:conclusions}
 
 
-\begin{figure*}
-\begin{center}
-\includegraphics[width=1.0\textwidth]{Figures_eps/figure_5_4.eps}
-\end{center}
-\caption{Scatter plot for $X_{off}$ as function of the relation between velocities of substructures and the host halos and 
-for different z. The top panel is represented to the sample with $v > 700$ \kms and down panel is represented 
-for $v<700$ \kms} 
-\label{cos_theta1}
-\end{figure*}
-
-\begin{figure*}
-\begin{center}
-%\includegraphics[width=1.0\textwidth]{Figures_eps/figure_5_2.eps}
-\end{center}
-\caption{Integrated distributions of $|\vec{v}|/V_{\rm c,host}$ at all
-  $z$. The left panel correponds to the sample with $V_{\rm c, host}>700$ \kms and
-  right panel correpond to the sample with $V_{\rm c,host}<700\kms$.} 
-\label{cos_theta2}
-\end{figure*}
 
 
 
@@ -385,49 +392,29 @@ In order to explore the distribution of displacements expected in the observatio
 \end{equation}
  
 
-Figure \ref{newparameter} shows the scatter plot of the parameter $\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)$ vs the 
-displacement ($d_{2d,(X,Y)}$) between the host halo and the substructure and for different redshifts. This parameter is 
-consistent with the observations. The red star simbol in the Figure \ref{newparameter} is equal to 0.54 corresponding to 
-the fraction in velocity dispersion in the line-of-sigth of the group SL2S SJ08544-0121 ($\sigma_{host,halo}=341^{+43}_{-109}$ kms$^{-1}$ and $\sigma_{substructure}=185^{+30}_{-62}$), reported by \citet{2013A&A...552A..80M}.
-Based in the parameter $\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)>0.5$, we estimate the expected distribution of
-displacements and this is shown in the Figure \ref{displacements} for the two groups classified in this work.
+Figure \ref{newparameter} shows the scatter plot of the parameter
+$\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)$ vs the  displacement
+($d_{2d,(X,Y)}$) between the host halo and the substructure and for
+different redshifts. This parameter is  consistent with the
+observations. The red star simbol in the Figure \ref{newparameter} is
+equal to 0.54 corresponding to  the fraction in velocity dispersion in
+the line-of-sigth of the group SL2S SJ08544-0121
+($\sigma_{host,halo}=341^{+43}_{-109}$ kms$^{-1}$ and
+$\sigma_{substructure}=185^{+30}_{-62}$), reported by
+\citet{2013A&A...552A..80M}. Based in the parameter
+$\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)>0.5$, we estimate the
+expected distribution of displacements and this is shown in the Figure
+\ref{displacements} for the two groups classified in this work. 
+  
+
+
  
 
-
-
-
-\subsection{Number expected of Bullet Groups in the sample}
-
-
-In order to estimate the number of Bullet Groups expected in the
-Bolshoi Cosmological Simulation, we define the configuration of this system as one where the substructure is coming out of the host halo ($cos(\theta)>0.5$). For this 
-we make the scalar product between the velocity vector and position vector that defines the separation between 
- the host halo and the substructure, as shown below: \\
- 
-
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=1.0\textwidth]{Figures_eps/figure_8_1_nu=0.5_300kms_700kms.eps}
-\end{center}
-\caption{Scatter of $cos(\theta)$ vs $X_{off,new}$. The red dashed line correpond to the limit for $cos(\theta{})>0.5$,  
-where the substructure is emerging from the host halo and  $\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)\geq0.5$, 
-cicular velocities $<700$ kms$^{-1}$ and different redshifts.} 
-\label{cos_theta}
-\end{figure*}
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=1.0\textwidth]{Figures_eps/figure_8_3_nu=0.5_300kms_700kms.eps}
-\end{center}
-\caption{Cumulative distribution of $d_{real, (X,Y)}$ for $cos(\theta)>0.5$, $\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)\geq0.5$, 
-cicular velocities $<700$ kms$^{-1}$ and different redshifts.} 
-\label{cumulative_cos}
-\end{figure*}
 
 
 \section{Discussion}
 \label{sec:discussion}
+
 
 
 
