new figure and references

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,53 @@
+@ARTICLE{Riebe2013,
+   author = {{Riebe}, K. and {Partl}, A.~M. and {Enke}, H. and {Forero-Romero}, J. and 
+	{Gottl{\"o}ber}, S. and {Klypin}, A. and {Lemson}, G. and {Prada}, F. and 
+	{Primack}, J.~R. and {Steinmetz}, M. and {Turchaninov}, V.},
+    title = "{The MultiDark Database: Release of the Bolshoi and MultiDark cosmological simulations}",
+  journal = {Astronomische Nachrichten},
+ keywords = {\%simulation, cosmology, database, Virtual Observatory},
+     year = 2013,
+    month = aug,
+   volume = 334,
+    pages = {691-708},
+      doi = {10.1002/asna.201211900},
+   adsurl = {http://adsabs.harvard.edu/abs/2013AN....334..691R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{ForeroRomero2010,
+   author = {{Forero-Romero}, J.~E. and {Gottl{\"o}ber}, S. and {Yepes}, G.
+	},
+    title = "{Bullet Clusters in the MARENOSTRUM Universe}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1007.3902},
+ primaryClass = "astro-ph.CO",
+ keywords = {dark matter, galaxies: clusters: general, galaxies: clusters: individual: 1E 0657-558, galaxies: halos, gravitational lensing: strong, X-rays: galaxies: clusters},
+     year = 2010,
+    month = dec,
+   volume = 725,
+    pages = {598-604},
+      doi = {10.1088/0004-637X/725/1/598},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...725..598F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Hayashi2006,
+   author = {{Hayashi}, E. and {White}, S.~D.~M.},
+    title = "{How rare is the bullet cluster?}",
+  journal = {\mnras},
+   eprint = {astro-ph/0604443},
+ keywords = {galaxies: clusters: individual: 1E 0657-56: galaxies: formation: dark matter, galaxies: clusters: individual: 1E 0657-56, galaxies: formation, dark matter},
+     year = 2006,
+    month = jul,
+   volume = 370,
+    pages = {L38-L41},
+      doi = {10.1111/j.1745-3933.2006.00184.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2006MNRAS.370L..38H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Vweb,
    author = {{Hoffman}, Y. and {Metuki}, O. and {Yepes}, G. and {Gottl{\"o}ber}, S. and 
 	{Forero-Romero}, J.~E. and {Libeskind}, N.~I. and {Knebe}, A.
