--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -91,15 +91,15 @@ In this Letter we present prediction for the abundance of group-like
 systems that might show a DM-baryon displacement. To this end we use a
 N-body cosmological simulation with such a resolution that allows us
 to identify multimodal dark matter clumps in the circular velocity
-range $300-1000$\kms. 
+range $300-700$\kms. 
 
 This paper is organized as the follows. In Section
 \ref{sec:simulation} we present the simulation and the halo catalogs
 used in this work. We continue in Section \ref{sec:setup} with the
 geometry of the problem at hand and the measurements setup. Next in
 Section \ref{sec:results} we present our results to finish with a
-discussion and conclusion in Sections \ref{sec:discussion} and
-\ref{sec:conclusions}. 
+discussion and conclussion in Sections \ref{sec:discussion} and
+\ref{sec:conclussions}. 
 
 
 \section{Simulation, halo catalogs and pairs}
@@ -130,7 +130,7 @@ $V_{\rm c}>75$\kms. These two sets of halos constitute the basis for
 our analysis.
 
 For each host halo in the sample we find its most massive
-sub-halo. Each pair host/sub-halo is considererd as a potential Bullet
+sub-halo. Each pair host/sub-halo is considered as a potential Bullet
 Group and is kept for the measurement and analysis described in the
 next section.
 
@@ -165,8 +165,8 @@ position and velocity $\mu$.
 
 As a first approximation there are two quantities that are available
 from observations of these Bullet-like systems. The projected distance
-between two dominand dark matter clumps and the ratio of the
-galaxies' luminosities associated to them. From the simulation point
+between two dominant dark matter clumps and the ratio of the
+galaxies luminosities associated to them. From the simulation point
 of view this can be translated into the 2D projected values of
 $||\vec{r}||$, its value relative to the virial radius $D_{\rm off}=
 ||\vec{r}||_{\rm 2D}/R_{\rm vir}$ and the ratio of the circular velocities
@@ -179,7 +179,7 @@ interaction through the values for $\mu$.
 
 
 All the physical quantities described above can be used to describe
-the tree main stages in a bullet-like encounter. First, the sub-halo
+the three main stages in a bullet-like encounter. First, the sub-halo
 crosses the virial radius of the host halo starting a head on
 collission, $||\vec{r}||/R_{\rm vir}\approx 1$ and
 $\mu\approx<0.0$. Second, as the sub-halo crosses for the first time
@@ -206,7 +206,7 @@ kind of interactions observed in the Bolshoi simulation.
   between the host halo and its dominand sub-halo. The left panel
   shows the results in terms of the physical displacements and the
   right panel the same displacement normalized by the virial radius of
-  the host halo. The continous line corrresponds to the halos in the
+  the host halo. The continuous line corrresponds to the halos in the
   group sample $V_{\rm circ,host}>700\kms$ and the dashed lines to the
   sample $V_{\rm circ,host}<700\kms$.
   The vertical stripe corresponds to the estimate of the separation
