--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -344,7 +344,7 @@ sub-halo is close to the boundary of the host halo and is
 infalling. The second region has $\mu\approx 1$ and $D_{\rm off}<0.6$;
 at this stage the collision continues after the first crossing of the
 host's center, the low number of halos with radial infalling velocities
-and displacements $D_{\rm off}>0.6$ sugesst that this the maximum
+and displacements $D_{\rm off}>0.6$ suggest that this the maximum
 range of radii for the apogee.  The third region corresponds to
 $\mu\approx-1$ and $D_{\rm off}<0.6$ which corresponds to the
 secondary infall after apogee. 
@@ -366,7 +366,7 @@ secondary infall after apogee.
 These different collision geometries will produce different results in
 terms of the displacement between dark matter and baryons. Strictly
 speaking, the results we have derived so far, apply to multimodal groups and their
-expected separation betwen the two dominant dark matter clumps but it
+expected separation between the two dominant dark matter clumps but it
 should not be interpreted that all have a corresponding DM-baryon
 displacement. The systems where the halo is starting to fall into the
 host ($\mu\approx-1$, $D_{\rm off}>0.6$) should not present a
@@ -382,17 +382,17 @@ baryonic displacement, $d_{2D}^{\rm bar}$, equal to zero. Second, we
 consider that all systems with infalling velocities $\mu<-0.9$ and
 large displacements $D_{\rm off}>0.6$ also have baryonic displacements
 equal to zero. Third, for all the other cases we estimate the
-displacement between the baryons and the dominand DM peak by the
+displacement between the baryons and the dominant DM peak by the
 distances between the dominant peak and the center of mass of the main
 halo, $d_{2D}^{\rm bar}=D_{\rm off} R_{\rm vir}$, where $X_{\rm off}$
 is the offset computed for each host halo in the original catalog.
 
-This simplified modeldoes not take into account that there is a
+This simplified model does not take into account that there is a
 fraction of halos with $\mu<-0.9$ and $D_{\rm off}<0.6$ for which the
 collision has not started and should have $d_{2D}^{\rm bar}=0$. A detailed
 modeling of this fraction requires the study of the complete merger
 tree of the halo and sub-halo, a study beyond the scope of this
-Letter. Instead we cautio the reader that the derived fraction of
+Letter. Instead we caution the reader that the derived fraction of
 halos with a displacement $<d_{2D}^{\rm bar}$ can be considered as an
 upper limit. 
 
