--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -34,28 +34,30 @@
 \begin{document} 
 
 \title{The abundance of Bullet Groups in $\Lambda$CDM}
-\author{J. G. Fern\'andez-Trincado$^{1,2,3}$, J. E. Forero-Romero$^1$
-  and T. Verdugo$^3$} 
+\author{J. G. Fern\'andez-Trincado$^{1,2,3}$, J. E. Forero-Romero$^1$,
+  T. Verdugo$^3$, G. Foex$^4$ and V. Motta$^4$} 
 \affil{$^1$ Departamento de F\'{i}sica, Universidad de los Andes,
   Cra. 1 No. 18A-10, Edificio Ip, Bogot\'a, Colombia\\ 
        $^2$ Institute Utinam, CNRS UMR6213, Universit\'e de
   Franche-Comt\'e, OSU THETA de Franche-Comt\'e-Bourgogne,
   Besan\c{c}on, France\\ 
        $^3$ Centro de Investigaciones de Astronom\'ia, AP 264,
-  M\'erida 5101-A, Venezuela}        
+  M\'erida 5101-A, Venezuela\\
+  $^4$ Departamento de F\'isica y Astronom\'ia, Universidad de
+  Valpara\'iso, Avda. Gran Breta\~na 1111, Playa Ancha, Valpara\'iso
+  2360102, Chile  
+}        
 
 \begin{abstract}
 
 We estimate the expected distribution of displacements between the two
 dominant dark matter peaks in halos within a mass range corresponding
-to galaxy groups. We find that the probability of finding a system
-similar with displacements of $\sim$400 \hkpc is between 40\%
-for z$=0$ and 60\% for z$=1$ and $\Lambda$CDM standard model, which
-correspond to the observational constraint the object SL2S J08544-0121
-that is  a gravitational lens found in the SL2S and located at
-z$=0.35$. Given the larger abundance of groups with respect to
-clusters, finding multi-modal groups and baryonic-dark matter
-displacements.  
+to galaxy groups. We find that 5\% to 25\% of the dark matter systems
+with circular velocities in the range $300\kms$ to $700\kms$ show
+multimodal morphologies with displacements between the dark matter
+clumps equal or larger to $\sim 400$\hkpc, which corresponds to the
+observational constraint the object SL2S J08544-0121 located at
+$z=0.35$. 
 \end{abstract}
 
 \begin{keywords}
@@ -199,7 +201,7 @@ kind of interactions observed in the Bolshoi simulation.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{New_figures/figure_2.eps}
+\includegraphics[width=0.9\textwidth]{Figures_eps/figure_2.eps}
 \end{center}
 \caption{
   Integrated probability distribution for the displacement
@@ -219,7 +221,7 @@ kind of interactions observed in the Bolshoi simulation.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{Figures_eps/figure_4_VcircsubVcirchalo_300kms_700kms.eps} 
+\includegraphics[width=0.9\textwidth]{Figures_eps/figure_5.eps} 
 \end{center}
 \caption{2D histogram in the plane $V_{\rm c,sub}/V_{\rm
     c,host}$-$d_{2D}$. The left panel corresponds to groups and the
@@ -280,9 +282,9 @@ data presented by \cite{Gastaldello}.
 \subsection{Relative Velocities}
 \label{sec:velocities}
 
-\begin{figure}
+\begin{figure*}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{Figures_eps/figure_3.eps}
+\includegraphics[width=0.9\textwidth]{Figures_eps/figure_3.eps}
 \end{center}
 \caption{Integrated probability distribution for the relative velocity of the
 sub-halo with respect to its host. The left panel shows the results
@@ -290,7 +292,7 @@ in physical units while the right panel show the same values
 normalized by the circular velocity of the host halo. The line coding
 follows the same structure as Figure \ref{fig:displacement}}
 \label{fig:velocities}
-\end{figure}
+\end{figure*}
 
 In Figure \ref{fig:velocities} we present the integrated probability
 of the relative peculiar velocities of the sub-halos with respect to
@@ -320,7 +322,7 @@ $c\approx 6$ \citep{Hayashi2006}.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=1.0\textwidth]{Figures_eps/figure_4_300kms_700kms.eps}
+\includegraphics[width=0.9\textwidth]{Figures_eps/figure_4.eps}
 \end{center}
 \caption{x}
 \label{fig:geometry}
@@ -356,7 +358,7 @@ secondary infall after apogee.
 
 \begin{figure}
 \begin{center}
-%\includegraphics[width=0.5\textwidth]{Figures_eps/figure_3.eps}
+\includegraphics[width=0.5\textwidth]{Figures_eps/figure_7.eps}
 \end{center}
 \caption{Integrated probability distribution for the estimated
   baryonic displacements in the group and cluster samples at all redshifts.}
